<resources>
    <string name="app_name">Whatscolors</string>
    <string name="lch_string">"L:%1$3s  A:%2$3s  B:%3$3s"</string>
    <string name="str_v">"v%1$s"</string>
    <!--    <string name="str_terms">点击注册，就代表你同意了我们的使用条款</string>-->
    <string name="str_terms"><Data><![CDATA[点击注册，就代表你同意了我们的 <font color="#FF7B00">条款</font> 和 <font color="#FF7B00">使用协议</font>]]></Data></string>


    <string name="email">邮箱</string>
    <string name="Password">密码</string>
    <string name="Sign_In">登  录</string>
    <string name="Forgot_Password">忘记密码？</string>
    <string name="Create_Accoun">创建用户</string>
    <string name="user_info">用户信息</string>
    <string name="First_Name">名</string>
    <string name="Last_Name">姓</string>
    <string name="Confirm_Password">确认密码</string>
    <string name="Create_Account">创建账号</string>
    <string name="agreement">注册意味着您同意我们的服务条款，以及隐私协议</string>
    <string name="have_Account">我已有账号</string>
    <string name="take_photo">拍摄一张照片</string>
    <string name="take_photo_album">从图库里选择一张照片</string>
    <string name="Rate_for_us">为我们打分</string>
    <string name="privacy">隐私协议</string>
    <string name="about_us">关于我们</string>
    <string name="update">升级到专业版</string>
    <string name="Logout">退出登录</string>
    <string name="About">我们（Hung Hon Ind. co. ltd）是Hung Hon集团下专注于服装配件的厂家，我们为客户提供一站式的内衣配件采购平台及专业的服务，我们的工具意在为所有颜色调配师提供提升他们的日常工作效率。</string>
    <string name="Reference">样本</string>
    <string name="Specimen">配方</string>
    <string name="Lightbox">灯箱</string>
    <string name="None">无</string>
    <string name="change">修改</string>
    <string name="Back">后退</string>
    <string name="Reset">复位</string>
    <string name="Next">下一步</string>


    <string name="tip_1">电子邮件地址不能为空</string>
    <string name="tip_2">请输入正确的电子邮件地址</string>
    <string name="tip_3">找回密码验证已发送至您的邮箱！</string>
    <string name="tip_4">请重试</string>
    <string name="tip_5">电子邮件地址不能为空</string>
    <string name="tip_6">请输入正确的电子邮件地址</string>
    <string name="tip_7">密码不能为空</string>
    <string name="tip_8">条款条件</string>
    <string name="tip_9">名不能是空的</string>
    <string name="tip_10">姓不能是空的</string>
    <string name="tip_11">该邮件不能为空</string>
    <string name="tip_12">密码不能为空</string>
    <string name="tip_13">请确认密码</string>
    <string name="tip_14">请输入正确的电子邮件地址</string>
    <string name="tip_15">请输入一个只包含数字或字母的6-16位数字组合</string>
    <string name="tip_17">输入的两个密码不匹配</string>
    <string name="tip_18">一些权限获取失败，正常功能受到影响</string>
    <string name="tip_19">保存到系统相册!</string>
    <string name="tip_20">它没有被修改!</string>
    <string name="tip_22">超出使用次数限制，请升级专业版</string>
    <string name="tip_25">请先保存图片</string>
    <string name="tip_26">设备没有SD卡!</string>
    <string name="tip_29">您还可以编辑%1$s，升级到Pro解锁限制</string>
    <!--    <string name="tip_29">You can edit up to %1$s, ungrade to Pro to unlock the limitation</string>-->
    <string name="tip_30">退出</string>
    <string name="tip_31">个人信息</string>
    <string name="tip_32">普通</string>
    <string name="tip_33">您的系统上没有安装应用程序市场!</string>
    <string name="tip_34">您可以升级到专业版解锁图片编辑的限制。您可以选择一次性购买或者按年支付。</string>
    <string name="tip_35">购买三个月</string>
<!--    <string name="tip_36">￥ 63.00</string>-->
    <string name="tip_37"></string>
    <!--    您可以随时停止订阅-->
    <string name="tip_38">购买一年</string>
<!--    <string name="tip_39">￥ 176.00</string>-->
    <string name="tip_40">一次性购买</string>
<!--    <string name="tip_41">￥ 500.00</string>-->
    <string name="tip_42">支付</string>
    <string name="tip_43">恢复您的购买</string>
    <string name="tip_44">付款取消</string>
    <string name="tip_45">你已经购买了这个商品</string>
    <string name="tip_46">点击图像来缩放或裁剪图像</string>
    <string name="tip_47">其他</string>
    <string name="tip_48">更改使用的灯箱</string>
    <string name="tip_49">保存</string>
    <string name="tip_50">分享</string>
    <string name="tip_51">完成</string>
    <string name="tip_52">高级</string>
    <string name="no_wechat">请安装微信客户端</string>
    <string name="faild_to_wechat">跳转到微信失败</string>
    <string name="sign_up">注 册</string>
    <string name="share_to">分享到</string>
    <string name="ps_tip">请输入您的注册邮箱地址，我们将发送重置密码连接到您的邮箱</string>
    <string name="forgot_password">找回密码</string>
    <string name="send_your_password">发 送</string>
    <string name="copyright_2009_2019_n">Copyright © 2009-2019 \n 开平优丽内衣服装配料有限公司</string>
    <string name="no_net"><![CDATA[<str当前无网络，请检查网络]]></string>
    <string name="error_net">网络访问错误，请稍后再试</string>
    <string name="pay_success">支付成功</string>
    <string name="epires_in">会员有效期至：%1$s</string>
    <string name="date_forever">永久</string>
    <string name="dialog_tip2">请更新您的会员状态，以继续使用app</string>
    <string name="dialog_tip1">会员过期</string>
    <string name="dialog_tip3">确定</string>
    <string name="dialog_tip4">确定要退出登录吗？</string>
    <string name="dialog_tip5">退出登录</string>
    <string name="dialog_tip6">您的账号已在其他设备登录, 当前登录状态将注销. 请确认您的账号安全, 如果不是您本人操作, 建议您修改密码</string>
    <string name="dialog_tip7">"SSL认证失败，是否继续访问？"</string>
    <string name="dialog_tip8">提醒</string>

    <string name="no_goods">The goods do not exist</string>
    <string name="tip_fail_report">购买成功，等待确认中，请勿重复购买</string>
    <string name="str_fb">帮助与反馈</string>
    <string name="str_privacy">服务协议和隐私条款</string>
    <string name="str_no_use">暂不使用</string>
    <string name="yes_use">同意</string>
    <string name="change_pas">修改密码</string>
    <string name="privcy_tips">
    "请你务必审慎阅读、充分理解“服务协议”和“隐私政策”各条款，包括但不限于：为了向你提供即时通讯、内容分享等服务，我们需要收集你的设备信息、操作日志等个人信息。\n你可阅读<font color='#3F51B5'>
        服务协议</font>和<font color='#3F51B5'>隐私政策</font>了解详细信息。如果你同意，请点击“同意”开始接受我们得服务。"</string>
    <string name="dialog_tip9">密码在其他设备修改, 请重新登录！</string>
    <string name="dialog_tip10">当前有最新版本，请点击确定进行更新！</string>
    <string name="dialog_tip11">检测到最新版本，点击确定，将跳转到应用市场更新！</string>
    <string name="tip_53">请安装相应的应用市场！</string>
    <string name="str_login_abnormal">您已达到设备的最大数量限制, 您可在下月添加新的设备或联系客服.</string>
    <string name="str_ps_once">账号在新设备登录, 请使用邮箱收到的一次性密码登录！</string>
    <string name="dialog_tip12">本地校验失败，请重新登录！</string>
    <string name="OtpPassword">一次性密码</string>
    <string name="str_update">升级</string>
    <string name="str_isupdate">点击关闭后，可进入后台下载</string>
    <string name="str_update_version">版本更新</string>
    <string name="str_is_tonew">是否升级到%1$s版本？</string>
    <string name="str_update_under">后台下载中...</string>
    <string name="str_isdownloaded">下载完成！</string>
    <string name="tip_54">权限申请</string>
    <string name="tip_55">请允许，否则将影响部分功能的正常使用。</string>
    <string name="tip_56">取消</string>

</resources>
