<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ic_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ic2_bt_li"
        android:layout_marginTop="@dimen/dp_6"
        android:fadeScrollbars="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Reference"
                    android:textColor="#ff434040"
                    android:textSize="@dimen/sp_5" />

                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Specimen"
                    android:textColor="#ff434040"
                    android:textSize="@dimen/sp_5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic2_im_l"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_90"
                    android:layout_marginRight="@dimen/dp_0_5"
                    android:layout_weight="1"
                    android:scaleType="fitCenter" />

                <ImageView
                    android:id="@+id/ic2_im_r"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_90"
                    android:layout_marginLeft="@dimen/dp_0_5"
                    android:layout_weight="1"
                    android:scaleType="fitCenter" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:gravity="center"
                android:text="@string/tip_46"
                android:textColor="#ff8e8e93"
                android:textSize="@dimen/sp_5" />

            <RelativeLayout
                android:id="@+id/ic2_bottom_re"
                android:layout_width="@dimen/dp_104"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_6"
                android:background="@drawable/bg_light_box"
                android:padding="@dimen/dp_4">

                <ImageView
                    android:id="@+id/im_light"
                    android:layout_width="@dimen/dp_5"
                    android:layout_height="@dimen/dp_7"
                    android:layout_centerVertical="true"
                    android:src="@drawable/im_light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dp_2"
                    android:layout_toRightOf="@+id/im_light"
                    android:gravity="top"
                    android:text="@string/Lightbox"
                    android:textColor="#ff000000"
                    android:textSize="@dimen/sp_5" />

                <TextView
                    android:id="@+id/ic2_light_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/dp_2"
                    android:layout_toRightOf="@+id/im_light"
                    android:gravity="bottom"
                    android:text="@string/tip_47"
                    android:textColor="#ff8e8e93"
                    android:textSize="@dimen/sp_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/change"
                    android:textColor="#ffff7b00"
                    android:textSize="@dimen/sp_5" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/tip_48"
                android:textColor="#ff8e8e93"
                android:textSize="@dimen/sp_5" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ic2_bt_li"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_5"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/ic2_li1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dp_29"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_11"
                android:layout_height="@dimen/dp_11"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/im_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:gravity="center"
                android:text="@string/Back"
                android:textColor="#ffff7b00"
                android:textSize="@dimen/sp_4" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ic2_li2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_11"
                android:layout_height="@dimen/dp_11"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/im_undo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:gravity="center"
                android:text="@string/Reset"
                android:textColor="#ffff7b00"
                android:textSize="@dimen/sp_4" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ic2_li3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_29"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_11"
                android:layout_height="@dimen/dp_11"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/im_next" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:gravity="center"
                android:text="@string/Next"
                android:textColor="#ffff7b00"
                android:textSize="@dimen/sp_4" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
