<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/ic_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_26"
            android:layout_height="@dimen/dp_26"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:src="@drawable/im_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="center"
            android:text="Whatscolors"
            android:textColor="#ff434040"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:gravity="center"
            android:text="Textile Color Generation"
            android:textColor="#ff434040"
            android:textSize="@dimen/sp_6" />

        <EditText
            android:id="@+id/edit_em"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_15"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_28"
            android:background="@drawable/bg_edit"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/dp_7"
            android:textColorHint="#FFC7C7CC" />

        <FrameLayout
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="@dimen/dp_7">

            <EditText
                android:id="@+id/edit_ps"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_15"
                android:layout_gravity="center"
                android:background="@drawable/bg_edit"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:paddingLeft="@dimen/dp_7"
                android:textColorHint="#FFC7C7CC" />

            <CheckBox
                android:id="@+id/edit_ps_im"
                android:layout_width="@dimen/dp_9"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/dp_5"
                android:background="@drawable/eye_selecter"
                android:button="@null"
                android:checked="false" />
        </FrameLayout>


        <TextView
            android:id="@+id/lg_to"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_16"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_11"
            android:background="@drawable/bg_upgrade"
            android:gravity="center"
            android:text="@string/Sign_In"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_6" />

        <FrameLayout
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_3">

            <TextView
                android:id="@+id/lg_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="left"
                android:text="@string/str_fb"
                android:textColor="#ffff7b00"
                android:textSize="@dimen/sp_5" />

            <TextView
                android:id="@+id/lg_lost_ps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/Forgot_Password"
                android:textColor="#ffff7b00"
                android:textSize="@dimen/sp_5" />
        </FrameLayout>


        <TextView
            android:id="@+id/lg_to_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            android:gravity="center"
            android:text="@string/Create_Account"
            android:textColor="#ffff7b00"
            android:textSize="@dimen/sp_6" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>